# StringStorage

./: .gitignore  README.md
database/: CMakeLists.txt
database/database/: CMakeLists.txt  Database.cpp  Database.h  database_lib.cpp  database_lib.h
database/examples/: CMakeLists.txt  pack.c  pack_file.c  unpack.c  unpack_file.c
database/include/: btree_packed_db.h  btree_packed_db_config.h
database/src/: BPlusIndex.h  BTreePackedDb.cpp  BTreePackedDb.h  CMakeLists.txt  Compressor.cpp  Compressor.h  FileHandler.cpp  FileHandler.h  btree_packed_db_c_api.cpp
database/tests/: CMakeLists.txt  bplustree.cpp
database/tests/measure/: test.cmd
database/tests/measure_size/: pack.sh  unpack.sh
database/tests/measure_size/data/: 19215.json  19223.json  19253.json  19254.json  19256.json  19268.json  19270.json  19271.json  19272.json  19491.json  19501.json  19580.json  19582.json  19596.json  19598.json
database/tests/validate/: test.cmd
report/: presentation.pptx  report.tex
