add_custom_target(tests)
file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
foreach(file ${files})
    get_filename_component(target ${file} NAME_WE)
    add_executable(${target} ${file})
    add_dependencies(tests ${target})
    set_property(TARGET ${target} PROPERTY CXX_STANDARD 17)
    add_test(NAME "test_${file}" COMMAND ${target})
endforeach()
